--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
             <h1 class="text-center">Achados do dia</h1>
 
             <!-- listagem dos produtos -->
-            <article class="row" id="produtosContainer"></article>
+            <article class="row" id="produtosContainerPrincipal"></article>
             <!-- listagem dos produtos -->
 
             <div class="d-flex justify-content-center">
